@@ -13,6 +13,9 @@ Changes in DBD-Oracle XXX
  - convert a symbolically linked ORACLE_HOME to an absolute path 
     (patch by H.Merijn Brand, applied by Martin J. Evans) [rt70785]
 
+ [DOCUMENTATION]
+ - announce that Oraperl will be removed from the dist by v1.38.
+
 Changes in DBD-Oracle 1.30
   [DOCUMENTATION]
  - add warning about RT#69350 in documentation
